--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "KaitenNX",
   "version": "0.0.1",
-  "description": "Next generation kaiten based interface.",
+  "description": "UI library for web based on Kaiten",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server -p 8000",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/protractor-conf.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/niofis/KaitenNX.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/niofis/KaitenNX/issues"
+  },
+  "homepage": "https://github.com/niofis/KaitenNX",
   "devDependencies": {
-    "karma": "^0.12.14",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5"
+    "protractor": "~0.20.1",
+    "http-server": "^0.6.1"
   }
 }
